<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- forgot_password_screen strings -->

    <string name="app_name">Page 1</string>
    <string name="firstnametext_string">First Name:</string>
    <string name="lastnametext_string">Last Name:</string>
    <string name="usernametext_string">Username:</string>
    <string name="passwordtext_string">Passwords:</string>
    <string name="idtext_string">Employee ID:</string>
    <string name="go_back_string">Go Back </string>
    <string name="register_string">Register</string>
    <string name="continue_string">Continue</string>
    <string name="contact_info_string">Please contact the Department of Registration to verify your ID.</string>
    <string name="login_string">Login</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="daco_app_string">DACO APP</string>
    <string name="newUsers_string">New users?</string>
    <string name="click_here_string">Click here</string>
    <string name="airfield_manifest_string">Airfield Manifest</string>
    <string name="edit_icon">Edit</string>
    <string name="excel_confirm">You want to import Excel File to: </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cargo">Cargo</string>
    <string name="personnel">Personnel</string>
	<string name="mission">Start Mission</string>
	<!-- Auth UI - Signed in -->
	<string name="signed_in_header">You are signed in!</string>
	<string name="sign_out">Sign out</string>
	<string name="delete_account_label">Delete account</string>

	<string name="sign_in_failed">Sign in failed</string>
	<string name="sign_out_failed">Sign out failed</string>
	<string name="delete_account_failed">Delete account failed</string>

	<string name="user_profile_header">User profile:</string>
	<string name="profile_picture_content_desc">Profile picture</string>
	<string name="used_providers">Providers used: %s</string>
	<string name="idp_token">IDP Token</string>
	<string name="idp_secret">IDP Secret</string>

	<string name="sign_in_cancelled">Sign in cancelled</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="account_disabled">Account is disabled by the administrator</string>
	<string name="unknown_error">An unknown error occurred</string>

    <string name="AddPlane">add_plane</string>
    <string name="addPlaneForm">Add Plane</string>

    <!-- Excel Strings -->
    <string name="excelPlane">Planes Firebase</string>
    <string name="excelCargos">Cargos Firebase</string>
    <string name="excelPersonnel">Personnel Firebase</string>

</resources>