<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExcelActivity">

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@color/box_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/excel_confirm"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/planeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/excelPlane"/>
            <CheckBox
                android:id="@+id/cargoCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/planeCheckBox"
                android:checked="false"
                android:text="@string/excelCargos"/>
            <CheckBox
                android:id="@+id/personnelCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cargoCheckBox"
                android:checked="false"
                android:text="@string/excelPersonnel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:theme="@style/Theme.Material3.Dark.Dialog.Alert"
                android:textSize="15sp"
                android:clickable="true"
                android:focusable="true"/>

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:theme="@style/Theme.Material3.DayNight.Dialog"
                android:textSize="15sp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>