<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout android:id="@+id/daco_app_img"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/aircaft_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="60dp"
            android:contentDescription="aircaft_icon"
            android:src="@drawable/aircaft_icon" />
        <TextView
            android:id="@+id/login"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/daco_app_string"
            android:textColor="@color/_bg_App_color"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/textfield_group"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/firstnametext_string"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNamebox"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/usernamebox_shape"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/lastName"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lastnametext_string"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lastNamebox"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/usernamebox_shape"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/employeeId"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="170dp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/idtext_string"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/employeeIdbox"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/usernamebox_shape"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/contact_info"
            android:layout_width="266dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="250dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/contact_info_string"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/login_button"
        android:layout_marginTop="622dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_string"
            android:background="@drawable/loginbox_shape"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/new_users_field"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="680dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/new_users"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/newUsers_string"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/newUsersBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:background="@android:color/transparent"
            android:text="@string/click_here_string"
            android:textAllCaps="false"
            android:textColor="@color/_bg_App_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>
</RelativeLayout>