<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout android:id="@+id/daco_app_img"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/aircaft_icon"
            android:layout_width="157dp"
            android:layout_height="190dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="60dp"
            android:contentDescription="aircaft_icon"
            android:src="@drawable/aircaft_icon" />
        <TextView
            android:id="@+id/login"
            android:layout_width="315dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/daco_app_string"
            android:textColor="@color/_bg_App_color"
            android:textSize="35sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/textfield_group"
        android:layout_width="302dp"
        android:layout_height="234dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp">

        <Button
            android:id="@+id/forgotBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="170dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password_string"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/username_string"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernamebox"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/usernamebox_shape"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/password"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="88dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/password_string"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordbox"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/usernamebox_shape"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="16.29dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:contentDescription="username_icon"
            android:src="@drawable/username_icon" />
        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="18.76dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="88dp"
            android:contentDescription="password_icon"
            android:src="@drawable/password_icon" />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/login_button"
        android:layout_marginTop="622dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loginbox_shape"
            android:fontFamily="sans-serif"
            android:text="@string/login_string"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/new_users_field"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="680dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/new_users"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/newUsers_string"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/newUsersBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:background="@android:color/transparent"
            android:text="@string/click_here_string"
            android:textAllCaps="false"
            android:textColor="@color/_bg_App_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>
</RelativeLayout>